# LinefollowProject

./: .gitignore  CMakeLists.txt  GPIO.cpp  README.md  source.cpp  test.cpp  test.txt
Main/: BrickPi3.cpp  Lcd.cpp  UltraSonicHeader.h  detectCrossroad.cpp  lcdtest.cpp  lineCalibration.cpp  linefollower  linefollower.h  main.cpp  main2.cpp  makefile  source.cpp  sourceCrossroad.cpp  sourceDodgeMilk.cpp  sourceDodgeObject.cpp  sourceDriveRobot.cpp  sourceFreeRideLoop.cpp  sourceGridFollowFuncitons.cpp  sourceGridFollowLoop.cpp  sourceGridFollowLoopPID.cpp  sourceGridObjectDetect.cpp  sourceLcd.cpp  sourceLineFollowLoop.cpp  sourceLineFollowLoopPID.cpp  sourceMainFunctions.cpp  sourcePController.cpp  sourcePIDController.cpp  sourcePIDController2.cpp  sourcePIDLoop.cpp  sourceSensors.cpp  sourceSound.cpp  sourceTurnOnSpot.cpp  sourceUltraSonic.cpp
debugfiles/: Drivetest.cpp  Lijnvolgen_v1.cpp  Linedetect.cpp  Sensortest.cpp  drive.cpp  drivev2.cpp  lightsensortest.cpp
debugfiles/MainMP/: number_stuur.cpp
